--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.wrapper {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header .img {
   width: 100%;
 }
 .header .more-inf {
@@ -27,6 +27,7 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
+.task-label,
 .task {
   width: 56%;
   display: inline-block;
@@ -35,17 +36,18 @@ body {
 .task-wrapper {
   display: flex;
 }
-ul {
+#comp-tasks,
+#incomp-tasks {
   margin:0;
   padding: 0px;
 }
 li, h3 {
   list-style:none;
 }
-input,button{
+input, button{
   outline:none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -54,12 +56,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.subtitle {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +69,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -80,21 +81,22 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+#label-add {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-name,
+.edit-mode {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -103,33 +105,37 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task-name > *,
+.edit-mode > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-name > .checkbox,
+.edit-mode > .checkbox {
   margin: 0 10px;
 }
-li > label {
+.task-name > .task-label,
+.edit-mode > .task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px
+.task-name > .task,
+.edit-mode > .task {
+  width: 226px;
 }
-button.delete img {
+.delete .img-but {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete .img-but:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#comp-tasks label {
+#comp-tasks .task-label {
   text-decoration: line-through;
   color: #888;
 }
@@ -139,7 +145,7 @@ ul li input[type="text"] {
   display:none
 }
 
-ul li.edit-mode input[type="text"] {
+.ul .edit-mode .task {
   display:inline-block;
   width:224px
 }
