--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-wrapper {
@@ -164,12 +164,12 @@ input, button{
 
 /* Edit Task */
 ul li input[type="text"] {
-  display: none
+  display: none;
 }
 
 .ul .edit-mode .task {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul li.edit-mode label {
